# 3DWorld

./: CMakeLists.txt  ProgramSettings.h  README.md  main.cpp
Assets/Models/: flower.blend  flower.mtl  grass.mtl  simpleTree.mtl  skyBoxCube.blend  skyBoxCube.mtl  surfaceCubeGrass.blend  surfaceCubeGrass.mtl
Logging/: Logger.cpp  Logger.h  LoggerPIMPL.cpp  LoggerPIMPL.h
ModelLoading/: Face.cpp  Face.h  HelperFunctions.cpp  HelperFunctions.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Objects/: StaticObject.cpp  StaticObject.h
ProgramInformation/: AssetLocations.cpp  AssetLocations.h  WorldSettings.cpp  WorldSettings.h
ProjectSourceDependencies/glad/: glad.h
Render/: CommandCentre.cpp  CommandCentre.h
Render/CompileTimeChecks/: ValidBufferFlags.h  ValidBufferTarget.h  ValidMappingFlags.h
Render/DataStructures/: GridSectionInstanceRange.h  GridSectionRenderData.h  MeshRenderInformation.h  ModelRenderInformation.h  RenderInformation.h  RenderStructure.cpp  RenderStructure.h  SortedModel.h
Render/FrustumCulling/: FrustumCuller.cpp  FrustumCuller.h  FrustumPlane.h
Render/Shaders/: InstanceShaderProgram.cpp  InstanceShaderProgram.h  ShaderProgramBase.cpp  ShaderProgramBase.h  SkyBoxShaderProgram.cpp  SkyBoxShaderProgram.h
Render/Shaders/Source/InstanceShaders/: fragmentShader.txt  vertexShader.txt
Render/Shaders/Source/SkyBox/: fragmentShader.txt  vertexShader.txt
Render/Textures/: TextureBank.cpp  TextureManager.cpp  TextureManager.h
Render/VAO/: SkyBoxVAO.cpp  SkyBoxVAO.h  TerrainVAO.cpp  TerrainVAO.h  VAOBase.cpp  VAOBase.h
Render/VBO/: BufferData.h  BufferStorage.h
Window/: RenderWindow.cpp  RenderWindow.h
Window/Camera/: CameraMovement.h  CameraObject.cpp  CameraObject.h
World/BoundingVolumes/: AABB.cpp  AABB.h  DynamicAABB.cpp  DynamicAABB.h  StaticAABB.cpp  StaticAABB.h
World/RangeImplementation/: Range.cpp  Range.h  XRange.cpp  XRange.h  YRange.cpp  YRange.h  ZRange.cpp  ZRange.h
World/WorldLogic/: GameWorld.cpp  GameWorld.h  GridSection.cpp  GridSection.h  NewlyAddedCubes.h  TerrainRange.cpp  TerrainRange.h  WorldDirection.h  WorldGenerator.cpp  WorldGenerator.h
